# blappy-fird

./: .clang-format  .clang-tidy  .conanprofile  .gitattributes  .gitignore  README.md  blappy_fird.c  conanfile.py  config.nsi  linux.conanprofile  meson.build
.github/workflows/: main.yml
src/: game.cpp  game.h  main.c  main.cpp  server.cpp
